--- a/index.html
+++ b/index.html
@@ -90,6 +90,53 @@
       </div>
     </header>
 
+    <div class="backdrop" data-modal>
+      <div class="modal">
+        <form class="modal-form" autocomplete="off">
+          <h2 class="modal-title">Зарегистрируйтесь</h2>
+          <ul class="modal-list">
+            <li class="modal-item">
+              <label class="modal-label">
+                Имя
+                <input type="text" name="name" class="modal-input" />
+              </label>
+            </li>
+            <li class="modal-item">
+              <label class="modal-label">
+                Почта
+                <input type="email" name="email" class="modal-input" />
+              </label>
+            </li>
+            <li class="modal-item">
+              <label class="modal-label">
+                Телефон
+                <input type="tel" name="tel" class="modal-input" />
+              </label>
+            </li>
+            <li class="modal-item">
+              <label class="modal-label">
+                Пароль
+                <input type="password" name="password" class="modal-input" />
+              </label>
+            </li>
+            <li class="modal-item">
+              <label class="modal-label">
+                Повторите пароль
+                <input type="password" name="password" class="modal-input" />
+              </label>
+            </li>
+          </ul>
+          <button type="submit" class="button modal-button">
+            Зарегистрироваться
+          </button>
+        </form>
+        <button type="button" class="close-button" data-modal-close>
+          <svg class="modal-icon" width="16" height="16">
+            <use href="./image/sprite.svg#icon-cross"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
     <script src="./js/menu.js"></script>
     <script src="./js/script.js"></script>
   </body>
