add close modal

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
               <a href="#" class="menu-link">Таблица данных</a>
             </li>
           </ul>
-          <a href="#" class="header-register">Регистрация</a>
+          <a href="#" class="header-register" data-modal-open>Регистрация</a>
         </nav>
       </div>
     </header>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <form class="modal-form" autocomplete="off">
           <h2 class="modal-title">Зарегистрируйтесь</h2>
