--- a/index.html
+++ b/index.html
@@ -154,14 +154,196 @@
                     <input type="checkbox" class="bees-checkbox" />
                     <span class="bees-icon"></span>
                     <span class="bees-text">Индийская пчела</span>
-                  </label class="bees-label">
+                  </label>
                   <label>
                     <input type="checkbox" class="bees-checkbox" />
                     <span class="bees-icon"></span>
-                   <span class="bees-text"> Арликовая пчела</span>
+                    <span class="bees-text"> Арликовая пчела</span>
                   </label>
                 </div>
               </div>
+            </div>
+            <div class="form-wrapper">
+              <div class="rating">
+                <h2 class="form-title">Рейтинг</h2>
+                <fieldset>
+                  <div class="rating-group">
+                    <input
+                      class="rating-star"
+                      aria-label="Ужасно"
+                      value="1"
+                      type="radio"
+                      name="star"
+                      id="star1"
+                      checked
+                    />
+                    <input
+                      class="rating-star"
+                      aria-label="Плохо"
+                      value="2"
+                      type="radio"
+                      name="star"
+                      id="star2"
+                    />
+                    <input
+                      class="rating-star"
+                      aria-label="Средне"
+                      value="3"
+                      type="radio"
+                      name="star"
+                      id="star3"
+                    />
+                    <input
+                      class="rating-star"
+                      aria-label="Хорошо"
+                      value="4"
+                      type="radio"
+                      name="star"
+                      id="star4"
+                    />
+                    <input
+                      class="rating-star"
+                      aria-label="Отлично"
+                      value="5"
+                      type="radio"
+                      name="star"
+                      id="star5"
+                    />
+                  </div>
+                </fieldset>
+              </div>
+              <div class="producer">
+                <h2 class="form-title">Выбрать производителя</h2>
+                <ul class="producer-list">
+                  <li class="producer-item">
+                    <label class="producer-label">
+                      <input class="producer-input" type="checkbox" disabled />
+                      <span class="producer-box"></span>
+                      <svg width="90" height="30">
+                        <use href="./image/sprite.svg#icon-sony"></use>
+                      </svg>
+                    </label>
+                  </li>
+                  <li class="producer-item">
+                    <label class="producer-label">
+                      <input class="producer-input" type="checkbox" />
+                      <span class="producer-box"></span>
+                      <svg width="90" height="30">
+                        <use href="./image/sprite.svg#icon-sony"></use>
+                      </svg>
+                    </label>
+                  </li>
+                  <li class="producer-item">
+                    <label class="producer-label">
+                      <input class="producer-input" type="checkbox" />
+                      <span class="producer-box"></span>
+                      <svg width="90" height="30">
+                        <use href="./image/sprite.svg#icon-sony"></use>
+                      </svg>
+                    </label>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="form-wrapper">
+              <div class="select">
+                <h2 class="form-title">Волосатость брюшка пчелы</h2>
+                <select name="bees" id="bees">
+                  <option value="1">Большая индийская пчела</option>
+                  <option value="2">Медоносная пчела</option>
+                  <option value="3">Индийская пчела</option>
+                  <option value="4">Арликовая пчела</option>
+                </select>
+              </div>
+              <div class="cloth">
+                <h2 class="form-title">Выбрать тип одежды</h2>
+                <fieldset>
+                  <div class="cloth-group">
+                    <label class="cloth-label">
+                      <input
+                        class="cloth-star"
+                        aria-label="Ужасно"
+                        value="1"
+                        type="radio"
+                        name="cloth"
+                        id="cloth1"
+                      />
+                      <svg width="63" height="40">
+                        <use href="./image/sprite.svg#icon-jacket"></use>
+                      </svg>
+                    </label>
+                    <label class="cloth-label">
+                      <input
+                        class="cloth-star"
+                        aria-label="Плохо"
+                        value="2"
+                        type="radio"
+                        name="cloth"
+                        id="cloth2"
+                      />
+                      <svg width="14" height="64">
+                        <use href="./image/sprite.svg#icon-clock"></use>
+                      </svg>
+                    </label>
+                    <label class="cloth-label">
+                      <input
+                        class="cloth-star"
+                        aria-label="Средне"
+                        value="3"
+                        type="radio"
+                        name="cloth"
+                        id="cloth3"
+                      />
+                      <svg width="33" height="50">
+                        <use href="./image/sprite.svg#icon-trausers"></use>
+                      </svg>
+                    </label>
+                    <label class="cloth-label">
+                      <input
+                        class="cloth-star"
+                        aria-label="Хорошо"
+                        value="4"
+                        type="radio"
+                        name="cloth"
+                        id="cloth4"
+                      />
+                      <svg width="28" height="60">
+                        <use href="./image/sprite.svg#icon-kombez"></use>
+                      </svg>
+                    </label>
+                    <label class="cloth-label">
+                      <input
+                        class="cloth-star"
+                        aria-label="Хорошо"
+                        value="4"
+                        type="radio"
+                        name="cloth"
+                        id="cloth5"
+                      />
+                      <svg width="59" height="48">
+                        <use href="./image/sprite.svg#icon-polo"></use>
+                      </svg>
+                    </label>
+                    <label class="cloth-label">
+                      <input
+                        class="cloth-star"
+                        aria-label="Отлично"
+                        value="5"
+                        type="radio"
+                        name="cloth"
+                        id="cloth6"
+                      />
+                      <svg width="30" height="35">
+                        <use href="./image/sprite.svg#icon-shoes"></use>
+                      </svg>
+                    </label>
+                  </div>
+                </fieldset>
+              </div>
+            </div>
+            <div class="form-buttons">
+              <button class="form-btn" type="submit">Записать</button>
+              <button class="form-btn" type="button">Сбросить</button>
             </div>
           </form>
         </div>
@@ -233,6 +415,8 @@
         </button>
       </div>
     </div>
+
     <script type="module" src="./js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/js/multi-select-tag.js"></script>
   </body>
 </html>
