--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
       >
         <svg
           aria-expanded="false"
-          aria-controls="menu-container"
+          aria-controls="header-menu"
           aria-label="Мобильное меню"
           width="25"
           height="25"
+          role="navigation"
         >
           <use class="icon-burger" href="./image/sprite.svg#icon-burger"></use>
           <use class="icon-cross" href="./image/sprite.svg#icon-cross"></use>
@@ -82,7 +83,7 @@
             <li class="menu-item"><a href="#" class="menu-link">Соты</a></li>
             <li class="menu-item"><a href="#" class="menu-link">Мед</a></li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Таблица данных</a>
+              <a href="./table.html" class="menu-link">Таблица данных</a>
             </li>
           </ul>
           <a href="#" class="header-register" data-modal-open>Регистрация</a>
